@@ -978,6 +978,8 @@ have fallen out of use. To avoid confusion, they have not been re-used.
   79  non-hex character in \ex{} (closing brace missing?)
   80  non-octal character in \eo{} (closing brace missing?)
   81  missing opening brace after \eo 
+  82  parentheses are too deeply nested
+  83  invalid range in character class
 .sp
 The numbers 32 and 10000 in errors 48 and 49 are defaults; different values may
 be used if the limits were changed when PCRE was built.
